Fix class quotes.
